--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@number-flow/react": "^0.4.3",
-    "@studio-freight/react-lenis": "^0.0.47",
     "@twind/core": "^1.1.3",
     "@twind/preset-autoprefix": "^1.0.7",
     "@twind/preset-tailwind": "^1.1.4",
+    "lenis": "^1.1.13",
     "motion": "^11.14.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
