--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@twind/preset-autoprefix": "^1.0.7",
     "@twind/preset-tailwind": "^1.1.4",
     "lenis": "^1.1.13",
+    "lucide-react": "^0.525.0",
     "motion": "^11.14.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
