--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "motion": "^11.14.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
